--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,9 @@ html {
 a {
   text-decoration: none;
 }
+a a:hover {
+  text-decoration: underline;
+}
 
 ul li {
   list-style: none;
@@ -53,10 +56,14 @@ div.m-width {
   width: 100%;
 }
 
+.display-none {
+  display: none;
+}
+
 /* 2. HEADER ========================= */
 header {
   background-image: url("../img/plane.jpg");
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
   display: -webkit-box;
@@ -98,6 +105,9 @@ header nav .nav__logo {
   font-size: 3.6rem;
 }
 header nav .nav__menu {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -107,7 +117,19 @@ header nav .nav__menu {
           flex-direction: column;
 }
 header nav .nav__menu .nav__menu--main {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+header nav .nav__menu .nav__menu--main li {
+  padding: 11px;
+}
+header nav .nav__menu .nav__menu--main li a.selected {
+  text-decoration: underline;
 }
 header nav .nav__menu ul {
   display: -webkit-box;
@@ -139,7 +161,9 @@ header nav .nav__menu ul li a img {
 header nav .nav__menu ul li ul.nav_menu--drop-menu {
   background-color: var(--white);
   border-radius: 15px;
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -150,6 +174,7 @@ header nav .nav__menu ul li ul.nav_menu--drop-menu {
   position: absolute;
   right: 0;
   top: 25px;
+  z-index: 1;
 }
 header nav .nav__menu ul li ul.nav_menu--drop-menu li {
   margin-bottom: 7px;
@@ -225,9 +250,9 @@ main .main__title span.main__title--bar {
   width: 100%;
 }
 main section.main__container {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -237,21 +262,13 @@ main section.main__container {
   width: 100%;
 }
 main section.main__container .card-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  width: 100%;
 }
 main section.main__container .card-container .card-container__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
   gap: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(233px, 1fr));
 }
 main section.main__container .card-container article.card {
   -webkit-box-align: end;
@@ -322,7 +339,7 @@ main section.main__container .card-container .card-chosen {
           flex-grow: 3;
   -ms-grid-column-span: 3;
   grid-column: span 3;
-  padding-top: 50px;
+  padding: 50px 0px;
   width: 100%;
 }
 main section.main__container .card-container .card-chosen #chosen-dest {
@@ -362,12 +379,15 @@ main section.main__container .honduras {
   background-image: url(../img/honduras.jpg);
 }
 main section.trip-menu {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   border-radius: 15px;
   -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.19);
           box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.19);
-  min-width: 240px;
+  max-width: 233px;
   overflow: hidden;
   padding-top: 30px;
+  width: 100%;
 }
 main section.trip-menu h4 {
   color: var(--dark-gray);
@@ -409,10 +429,14 @@ main section.trip-menu ul.trip-menu__ul li a::before {
   border-width: 7.5px 0 7.5px 15px;
   content: "";
   height: 0;
-  left: 30px;
+  left: 25px;
   position: absolute;
   top: 20px;
   width: 0;
+}
+main section.trip-menu ul.trip-menu__ul li a:hover {
+  background-color: var(--dark-cyan);
+  color: var(--white);
 }
 
 /* 4. FOOTER ========================= */
@@ -450,6 +474,7 @@ footer .footer-nav .footer-nav__menu .footer-nav__menu__text {
   color: var(--white);
   font-size: 1.4rem;
   line-height: 1.7rem;
+  max-width: 300px;
 }
 footer .footer-nav .footer-nav__menu .footer-nav__menu__ul li {
   margin-bottom: 12px;
@@ -482,3 +507,19 @@ footer .social-nav__icons figure img {
 }
 
 /* 5. MEDIA QUERIES ========================= */
+@media only screen and (min-width: 1080px) {
+  main section.main__container .card-container {
+    width: calc(100% - 353px);
+  }
+
+  main section.main__container {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+@media only screen and (max-width: 600px) {
+  header nav .nav__menu .nav__menu--main {
+    display: none;
+  }
+}
